updated docs, added route to checkfor is liked
